# cloud-run

./: .env  .gitignore  Dockerfile  makefile  pyproject.toml  test_output.txt
.github/workflows/: ci.yml
app/: main.py
